--- a/src/App.css
+++ b/src/App.css
@@ -47,3 +47,23 @@
   display: inline-block;
   font-size: 16px;
 }
+
+.loader {
+  margin: auto;
+  border: 8px solid #f3f3f3; /* Light grey */
+  border-top: 8px solid #3498db; /* Blue */
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  animation: loader-spin 1s linear infinite;
+  text-align: center;
+}
+
+@keyframes loader-spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
